fix(dateinputs): align picker icons

--- a/packages/material/scss/common/_forms.scss
+++ b/packages/material/scss/common/_forms.scss
@@ -25,6 +25,10 @@
         }
     }
 
+    .k-picker-wrap > .k-dateinput {
+        width: 100%;
+    }
+
     .k-picker-wrap .k-dateinput-wrap {
         box-shadow: none;
     }
